--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,633 +1,282 @@
-/* - General Setup - */
-* {
-	margin: 0;
-}
-
-html, body {
-  height: 100%;
-  width: 100%;
-}
-
 body {
-  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
-  font-size: 14px;
-  line-height: 1.42857143;
-  color: #333;
-  background-color: #000;
-	font-size:13px;
-}
-
-/* - Links - */
-body a {
-  text-decoration: underline dotted;
-  color: #333;
-}
-
-a:hover {
-  color: #008EBD;
-}
-
-a:visited {
-  color: #00A8E0;
-}
-
-/* Buttons */
-.btn {
-	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
-	background: #FFF;
-	border-style: solid;
-	border-width: 1px;
-	border-color: #000;
-  -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
-  border-radius: 3px;
-  font-size: 13px;
-  padding: 5px 15px 5px 15px;
-  text-decoration: none;
-}
-
-.btn:hover {
-  border-color: #0CF;
-  text-decoration: none;
-}
-
-.btn:active {
-	color: #2b58e1;
-}
-
-.deletebtn {
-	background-image: url('../img/delete_icon.png');
-	background-size: 15px 15px;
-	background-position: center;
-  background-repeat: no-repeat;
-	height: 30px;
-	width: 30px;
-}
-
-.deletebtn:hover {
-	background-image: url('../img/delete_hover.png');
-}
-
-.editbtn {
-	background-image: url('../img/edit_icon.png');
-	background-size: 15px 15px;
-	background-position: center;
-  background-repeat: no-repeat;
-	height: 30px;
-	width: 30px;
-	margin-top: 10px;
-}
-
-.editbtn:hover {
-	background-image: url('../img/edit_hover.png');
-}
-
-.input {
-	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
-	-webkit-border-radius: 3px;
-	-moz-border-radius: 3px;
-	border-radius: 3px;
-	padding: 5px;
-	border-style: solid;
-	border-width: 1px;
-	border-color: #000;
-}
-
-.select select {
-	-webkit-border-radius: 3px;
-	-moz-border-radius: 3px;
-	border-radius: 3px;
-	padding: 10px;
-	border-style: solid;
-	border-width: 1px;
-	border-color: #000;
-}
-
-select {
-	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
-	width: 200px;
-	display: inline-block;
-	-webkit-appearance: none;
-	-moz-appearance: none;
-	appearance: none;
-	border:none;
-	border: 1px solid #000000;
-	-webkit-border-radius: 3px;
-	-moz-border-radius: 3px;
-	border-radius: 3px;
-	padding:.75em 1em .5em 1em;
-	background-color:white;
-	background-image:url(/img/select-arrow.png);
-	background-position:175px 50%;
-	background-repeat: no-repeat;
-}
-
-select:hover {
-	box-shadow: 0 1px 1px 0 rgba(0,0,0,0.1);
-}
-
-select::-ms-expand {
-	display:none;
-}
-
-.input:hover {
-	border-color: #0CF;
-}
-
-.input:focus {
-	border-color: #0CF;
-}
-
-.inputproblem {
-	border-color: #FF1E00;
-}
-
- /* - Navbar - */
-.navbar {
-	background-color: #333;
-}
-
-.navbar ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-}
-
-.navbar ul li.icon {
-	display: none;
-}
-
-.navbar li {
-  float: left;
-}
-
-.navbar li a {
-  display: block;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-}
-
-.navbar li a:hover {
-  background-color: #111;
-}
-
-li.navactive {
-  background-color: #4CAF50;
-}
-
-#navRight {
-	float: right;
-}
-
-@media screen and (max-width:736px) {
-	#navRight {
-		float:none;
-	}
-
-	ul.topnav li:not(:first-child) {
-		display: none;
-	}
-  ul.topnav li.icon {
-    float: right;
-    display: inline-block;
-  }
-
-	ul.topnav.responsive {
-		position: relative;
-	}
-  ul.topnav.responsive li.icon {
-    position: absolute;
-    right: 0;
-    top: 0;
-  }
-  ul.topnav.responsive li {
-    float: none;
-    display: inline;
-  }
-  ul.topnav.responsive li a {
-    display: block;
-    text-align: left;
-  }
-	ul.topnav.responsive li.navactive {
-		background-color: #4CAF50;
-		display: block;
-  }
-}
-
-/* - Wrapper - */
-.wrapper_middle {
-  width: 90%;
-  margin: auto;
-}
-
-/* - Box Design - */
-.panel {
-  background-color: #4CAF50;
-}
-
-.panel-heading {
-  background-color: #333;
-  height: 40px;
-  color: #FFF;
-  font-size: 16px;
-  line-height: 40px;
-  font-weight: bold;
-  padding-left: 10px;
-}
-
-.panel-body {
-  vertical-align: top;
-  text-align: center;
-	background-color: #4CAF50;
-}
-
-.label {
-  color: #FFF;
-}
-
- /* - BOSE - */
-.boseSystems {
- width: 100%;
- min-height: 110px;
- text-align: center;
- vertical-align: middle;
- background-color: #4CAF50;
- overflow: hidden;
-}
-
-.boseDevicesDropdown {
-	display: none;
-}
-
-.boseDevicePower {
-	font-size: 10px;
-	font-style: italic;
-}
-
-.boseDevices {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-	display: inline-block;
-}
-
-.boseDevices  li {
-  float: left;
-}
-
-.boseDevice {
-  display: inline-block;
-	text-align: center;
-  vertical-align: middle;
-	margin-left: 5px;
-	margin-right: 5px;
-	margin-top: 3px;
-	padding: 5px;
-}
-
-.boseDevice:hover {
-  background-color: #6fbf72;
-}
-
-.boseButton, .bosePreset {
-  margin: 2px;
-}
-
-.boseVolume {
-  margin: 2px;
-  margin-top: 5px;
-}
-
-.boseSleeptimer {
-	width: 70px;
-	background-position:45px 50%;
-}
-
-.boseSleeptimerText {
-	margin: 2px;
-	margin-top: 5px;
-	color: #FFF;
-}
-
-.boseContent {
-	overflow: hidden;
-	width: 100%;
-}
-
-.boseInfo {
-  width: 50%;
-  min-height: 250px;
-  overflow: hidden;
-	vertical-align:middle;
-	text-align: center;
-  font-size: 15;
-	float: left;
-}
-
-.boseInfoContent {
-	background-color: #FFF;
-	margin: 10px;
-	max-width: 90%;
-	padding: 10px;
-	text-align: center;
-	overflow: hidden;
-	display: inline-block;
-}
-
-.boseArt {
-  vertical-align:middle;
-	min-height: 250px;
-	min-width: 250px;
-	max-width: 250px;
-}
-
-.boseArtContent {
-	width: 100%;
-
-}
-
-.boseControl {
-	width: 50%;
-	min-height: 300px;
-	overflow: hidden;
-  vertical-align:middle;
-	float: left;
-}
-
-.boseControlContent {
-  background-color: #333;
-	margin: 10px;
-	max-width: 400px;
-	padding: 10px;
-	text-align: center;
-	overflow: hidden;
-	display: inline-block;
-}
-
-@media screen and (max-width:600px) {
-	.boseInfo {
-	  width: 100%;
-		float: none;
-	}
-
-	.boseControl {
-		width: 100%;
-		float: none;
-	}
-
-	.boseDevices {
-		display:none;
-	}
-
-	.boseDevicesDropdown {
-		margin-top: 35px;
-		display: inline-block;
-	}
-}
-
-.boseSongInfo{
-  vertical-align:top;
-  text-align: center;
-}
-
-.boseButton {
-  width: 40px;
-  height: 40px;
-  font-size: 16px;
-}
-
-.boseControlGroup {
-  margin-bottom: 10px;
-}
-
-.boseVolume {
-  color: #FFF;
-}
-
-.clearFloat {
-	clear:both;
-}
-
-/* Alarm settings */
-.clear {
-	clear: left;
-	display: block;
-}
-
-.alarm {
-	display: inline-block;
-	width: 100%;
-	text-align: center;
-}
-
-.eachAlarm {
-	display: inline-block;
-	margin: 0 auto;
-	margin-bottom: -10px;
-	width: 90%;
-	height: 120px;
-	text-align: center;
-	overflow: hidden;
-}
-
-.alarmContent {
-	width: 500px;
-	height: 120px;
-	margin: 0 auto;
-}
-
-.alarmInfo {
-	margin-top: 10px;
-	width: 50%;
-	height: 100px;
-	float: left;
-}
-
-.alarmSwitch {
-	margin-left: 20px;
-	margin-top: 35px;
-	width: 20%;
-	height: 50px;
-	float: left;
-}
-
-.alarmButtons {
-	margin-left: 20px;
-	margin-top: 35px;
-	width: 20%;
-	height: 50px;
-	float: left;
-}
-
-@media screen and (max-width:414px) {
-	.eachAlarm {
-		overflow: visible;
-	}
-
-	.alarmContent {
-		width: 100%;
-	}
-
-	.alarmInfo {
-		margin-left: 0px;
-		float: none;
-	}
-
-	.alarmSwitch {
-		float: none;
-		margin-top: -100px;
-		margin-left: 200px;
-	}
-
-	.alarmButtons {
-		float: none;
-		margin-top: -10px;
-		margin-left: 200px;
-		width: 100px;
-	}
-}
-
-@media screen and (max-width:320px) {
-	.alarmInfo {
-		margin-left: 0px;
-		float: none;
-	}
-
-	.alarmSwitch {
-		float: none;
-		margin-top: -100px;
-		margin-left: 150px;
-	}
-
-	.alarmButtons {
-		float: none;
-		margin-top: -10px;
-		margin-left: 150px;
-	}
-}
-
-.alarmName {
-	font-weight: bold;
-	margin-bottom: -5px;
-}
-
-.alarmTime {
+	background: none;
+}
+.logo, .newAlarmMenu{
+	padding: 5px 0;
+}
+.full {
+	background: url(/img/bose01.jpg) no-repeat center center fixed;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+}
+.panel-primary>.panel-heading{
+	background-color: #222;
+}
+
+.playListSpace{
+	margin-top: -33px;
+}
+.playListSpace > a {
+	padding: 0!important;
+}
+.boseButtonPlay{
+	border: solid 3px #FFF;
+	border-radius: 50%;
+	width: 95px;
+	height: 95px;
+	margin: -15px 10px 0 10px;
+	background-color: #222;
+	color: white;
 	font-size: 25px;
-	font-weight: bold;
+}
+.navbar .navbar-nav {
+	display: inline-block;
+	float: none;
 }
 
-.alarmDevice {
-	font-weight: bold;
-	margin-top: -5px;
-}
-
-.alarmDays {
-	margin-top: 5px;
-	font-size: 10px;
-}
-
-.alarmPV {
-	font-size: 10px;
-}
-
-.alarmvolumecontainer {
-	background-color: #FFF;
+.navbar .navbar-collapse {
 	text-align: center;
-	vertical-align:middle;
-	display: inline-block;
-	height: 30px;
-	overflow: hidden;
-	border: 1px solid #000000;
-	-webkit-border-radius: 3px;
-	-moz-border-radius: 3px;
-	border-radius: 3px;
 }
 
-.alarmvolume {
-	-webkit-appearance: none;
+.boseButtonBar{
+	border: none;
+	background-color: transparent;
+	font-size: 18px;
+}
+.presetButton{
+	min-width: 78px!important;
+	width: 78px!important;
+}
+
+.songInfoMenu {
+	margin: 0!important;
+	padding: 0!important;
+}
+.boseInfoContent{
+	height: 60px;
+	width: 300px;
+}
+.imgAlbum{
+	height: 50px;
+	width: 55px;
+	float: left;
+	margin-top: 2px;
+}
+.boseSongInfo{
+	width: 290px;
+	color: #fff;
+	padding-left: 69px;
+	text-align: left;
+	padding-top: 10px;
+	height: 60px;
+}
+
+.boseDevice{
+	padding: 10px;
+	color: #999999;
+}
+.boseDeviceImg > img {
+	float: left;
+}
+#menu-speaker{
+	font-size: 20px;
+	color: #222;
+}
+.licence{
+	padding: 20px 0;
+}
+
+.alarmTime, .alarmDays{
+	font-size: 38px;
+	font-weight: 200;
+}
+.alarmDevice, .alarmPV{
+	font-size: 20px;
+}
+.alarmDevice {
+	text-align: right;
+}
+
+.checklist{
+	width: 100%!important;
+	border: 1px solid #ccc!important;
+}
+.checklist > li {
+	width: 13%;
+}
+#alarmswitch{
+	float: left;
+	margin-top: -7px;
+	margin-left: -10px;
+}
+#alarmdevice{
+	width: 85%;
+}
+#alarmvolume{
+	width: 90%;
+}
+#alarmvolumetext{
+	float: right;
+	width: 5%;
+	margin-top: -24px;
+	font-size: 20px;
+}
+.alarmvolumespace{
+	padding-top: 10px;
+}
+.alarmSwitch, .alarmButtons {
+	float: left;
+}
+.alarmName{
+	margin-top: 10px;
+}
+.alarmButtons{
+	padding-top: 8px;
+	padding-left: 5px;
+	color: #222;
+}
+.addModal{
+	font-size: 14px;
+	float: right;
+	cursor: pointer;
+}
+#boseDeviceSelectedImage, #boseDeviceSelectedName, #boseDeviceSelectedStatus{
+	text-align: center;
+}
+
+#wrapper {
+	padding-left: 0;
+	-webkit-transition: all 0.5s ease;
+	-moz-transition: all 0.5s ease;
+	-o-transition: all 0.5s ease;
+	transition: all 0.5s ease;
+}
+#wrapper.toggled {
+	padding-left: 250px;
+}
+#sidebar-wrapper {
+	z-index: 1000;
+	position: fixed;
+	left: 250px;
+	width: 0;
 	height: 100%;
-	background-color: #FFF;
-	display: inline-block;
-	margin-left: 5px;
+	margin-left: -250px;
+	overflow-y: auto;
+	background: #000;
+	-webkit-transition: all 0.5s ease;
+	-moz-transition: all 0.5s ease;
+	-o-transition: all 0.5s ease;
+	transition: all 0.5s ease;
 }
 
-.alarmvolume::-webkit-slider-thumb {
-  -webkit-appearance: none;
-  border: 1px solid #000000;
-  height: 25px;
-  width: 10px;
-  border-radius: 3px;
-  background: #2B58E1;
-  cursor: pointer;
-	margin-top: -8px;
-  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d; /* Add cool effects to your sliders! */
+#wrapper.toggled #sidebar-wrapper {
+	width: 250px;
 }
 
-.alarmvolume::-webkit-slider-runnable-track {
-  width: 100%;
-  height: 8.4px;
-  cursor: pointer;
-  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
-  background: #3071a9;
-  border-radius: 1.3px;
-  border: 0.2px solid #010101;
+#page-content-wrapper {
+	position: absolute;
+	padding: 15px;
 }
 
-.alarmvolume:focus::-webkit-slider-runnable-track {
-  background: #367ebd;
+#wrapper.toggled #page-content-wrapper {
+	position: absolute;
+	margin-right: -250px;
 }
 
-#alarmvolumetext {
-	background-color: #FFF;
+
+.primaryNav > li, .secondaryNav > li {
+	display: table-cell;
+}
+
+/* Sidebar Styles */
+
+.sidebar-nav {
+	position: absolute;
+	top: 0;
+	width: 250px;
 	margin: 0;
 	padding: 0;
-	width: 30px;
-	height: 100%;
-	margin-top: -12px;
-	margin-left: 5px;
-	display: inline-block;
-	text-align: center;
-	vertical-align:middle;
+	list-style: none;
 }
 
-/* Create Alarm CSS */
-.alarmCreateTable {
-	display: inline-block;
-	margin-top: 10px;
+.sidebar-nav li {
+	text-indent: 20px;
+	line-height: 40px;
 }
 
-.alarmCreateTable td {
-	padding-top: 5px;
-	padding-bottom: 5px;
+.sidebar-nav li a {
+	display: block;
+	text-decoration: none;
+	color: #999999;
 }
 
-.timepicker {
-	width: 50px;
-	text-align: center;
+.sidebar-nav li a:hover {
+	text-decoration: none;
+	color: #fff;
+	background: rgba(255,255,255,0.2);
 }
 
-.alarmname {
-	width: 150px;
+.sidebar-nav li a:active,
+.sidebar-nav li a:focus {
+	text-decoration: none;
 }
 
-.alarm_left_td {
-	padding-right: 15px;
-	text-align: right;
-	font-weight: bold;
+.sidebar-nav > .sidebar-brand {
+	height: 65px;
+	font-size: 18px;
+	line-height: 60px;
 }
 
-.alarm_both_td {
-	text-align: center;
-	font-weight: bold;
+.sidebar-nav > .sidebar-brand a {
+	color: #999999;
 }
 
-#alarmswitch {
-	display: inline-block;
+.sidebar-nav > .sidebar-brand a:hover {
+	color: #fff;
+	background: none;
 }
+.container-fluid{
+	padding-right: 0!important;
+	padding-left: 0!important;
+}
+
+@media(min-width:768px) {
+	#wrapper {
+		padding-left: 250px;
+	}
+
+	#wrapper.toggled {
+		padding-left: 0;
+	}
+
+	#sidebar-wrapper {
+		width: 250px;
+	}
+
+	#wrapper.toggled #sidebar-wrapper {
+		width: 0;
+	}
+
+	#page-content-wrapper {
+		position: relative;
+	}
+
+	#wrapper.toggled #page-content-wrapper {
+		position: relative;
+		margin-right: 0;
+	}
+	.container-fluid{
+		padding-right: 15px;
+		padding-left: 15px;
+	}
+	.navbar .navbar-nav {
+		display: inline-block;
+		float: left;
+	}
+}
+
 
 /* On/Off Switch */
 .switch {
@@ -720,11 +369,53 @@ li.navactive {
 	box-shadow: -1px 1px 5px rgba(0, 0, 0, 0.2);
 }
 
-/* Transition
-========================== */
 .switch-label, .switch-handle {
 	transition: All 0.3s ease;
 	-webkit-transition: All 0.3s ease;
 	-moz-transition: All 0.3s ease;
 	-o-transition: All 0.3s ease;
+}
+
+.alarmvolume {
+	-webkit-appearance: none;
+	height: 100%;
+	background-color: #FFF;
+	display: inline-block;
+	margin-left: 5px;
+}
+
+.alarmvolume::-webkit-slider-thumb {
+	-webkit-appearance: none;
+	border: 1px solid #000000;
+	height: 25px;
+	width: 10px;
+	border-radius: 3px;
+	background: #2B58E1;
+	cursor: pointer;
+	margin-top: -8px;
+}
+
+.alarmvolume::-webkit-slider-runnable-track {
+	width: 100%;
+	height: 8.4px;
+	cursor: pointer;
+	background: #3071a9;
+	border-radius: 1.3px;
+}
+
+.alarmvolume:focus::-webkit-slider-runnable-track {
+	background: #367ebd;
+}
+
+#alarmvolumetext {
+	background-color: #FFF;
+	margin: 0;
+	padding: 0;
+	width: 30px;
+	height: 100%;
+	margin-top: -12px;
+	margin-left: 5px;
+	display: inline-block;
+	text-align: center;
+	vertical-align:middle;
 }
